// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DashboardPage 1`] = `
<div>
  <Link
    to="/study"
  >
    Study now
  </Link>
</div>
`;

exports[`should render DashboardPage without due words 1`] = `
<div>
  <button
    disabled={true}
  >
    Study now
  </button>
</div>
`;
